# research-js-runtime

./: CMakeLists.txt  README.md  TROUBLESHOOTING.md  V8.md  build_check_v8.sh  check_v8_version.cpp  http_test.js  process_test.js  test.js
cmake/: FindLibUV.cmake  FindV8.cmake
docs/: 01-introduction.md  02-v8-basics.md  03-project-structure.md  04-runtime-core.md  05-native-functions.md  06-module-system.md  07-event-loop.md  08-fs-module.md  09-http-module.md  10-process-module.md  11-testing-debugging.md  12-advanced-topics.md  13-extending.md  README.md
examples/: hello.js  server.js
include/: event_loop.h  fs_module.h  http_module.h  module.h  process_module.h  runtime.h
src/: event_loop.cpp  fs_module.cpp  http_module.cpp  main.cpp  module.cpp  process_module.cpp  runtime.cpp
test/: math.js  process_test.js  simple_test.js  test-output.txt  test.js
